# media-processing-workshop

./: .gitignore  00_intro.ipynb  00_introduction.ipynb  01_basic-modification.ipynb  01_spatial_modification_1.ipynb  02_interpolations.ipynb  02_spatial_modification_2.ipynb  03_intensity-transformation.ipynb  03_spatial_modification_3.ipynb  04_fft_1.ipynb  04_histogram.ipynb  05_convolution.ipynb  05_fft_2.ipynb  06_fft_3.ipynb  06_fourier-transform.ipynb  07_cosine-transform.ipynb  07_fft_4.ipynb  08_fft_5.ipynb  08_quality-assessment.ipynb  09_dct.ipynb  09_jpeg.ipynb  09_least-significant-bit-steganography.ipynb  10_jpeg-codec.ipynb  10_quality_assessment.ipynb  11_mpeg-codec.ipynb  11_mpeg.ipynb  12_image-registration.ipynb  13_image-stitching.ipynb  14_optical-flow.ipynb  NOTICE  README.md  pyproject.toml  requirements.txt
assets/images/libraries/pillow/: ATTRIBUTION.md
assets/images/libraries/scikit-image/: ATTRIBUTION.md
assets/images/misc/: color_bars_cmyk.tif
assets/images/original/raster/: test_binary.tif
code/: 01-introduction.ipynb  02-io.ipynb  03-color-space.ipynb  03-interpolation.ipynb  04-basic-modification.ipynb  04-geometric-transformation.ipynb  05-intensity-transformation.ipynb  05-interpolation.ipynb  06-histogram-processing.ipynb  06-histogram.ipynb  06-intensity-transformation.ipynb  07-histogram.ipynb  07-spatial-filtering.ipynb  08-frequency-filtering.ipynb  08-spatial-filtering.ipynb  09-multi-resolution-analysis.ipynb  10-image-compression.ipynb  11-morphological-processing.ipynb
code/base/: 01-complex-numbers.ipynb  02-linalg-basics.ipynb  03-convolution.ipynb  04-transforms.ipynb
code/foundations/: 01-complex-numbers.ipynb  03-convolution.ipynb  04-transforms.ipynb
code/projects/dip3e/: chapter-02.ipynb
code/utils/: color-space.ipynb  compression.ipynb  convolution.ipynb  padding.ipynb  quality-assessment.ipynb  transform.ipynb
codecs/: README.md
codes/: 00_introduction.ipynb  01_basic-modification.ipynb  01_introduction.ipynb  02_basic-modification.ipynb  02_interpolations.ipynb  03_intensity-transformation.ipynb  03_interpolations.ipynb  04_histogram.ipynb  04_intensity-transformation.ipynb  05_convolution.ipynb  05_histogram.ipynb  06_convolution.ipynb  06_fourier-transform.ipynb  07_cosine-transform.ipynb  08_cosine-transform.ipynb  08_quality-assessment.ipynb  09_least-significant-bit-steganography.ipynb  09_quality-assessment.ipynb  10_jpeg-codec.ipynb  10_least-significant-bit-steganography.ipynb  11_mpeg-codec.ipynb  12_image-registration.ipynb  12_mpeg-codec.ipynb  13_image-registration.ipynb  13_image-stitching.ipynb  14_optical-flow.ipynb
codes/utilities/: dct.py  mpeg.py  quality_assessment.py  spatial_modification.py  steganography.py
codes/utils/: convolution.py  dct.py  dft.py  filters.py  jpeg.py  mpeg.py  quality_assessment.py  spatial_modification.py  steganography.py
resources/: test.tif
utilities/: convolution.py  dct.py  dft.py  filters.py  jpeg.py  spatial_modification.py
