[project]
name = "media-processing-workshop"
version = "0.1.0"
description = "A comprehensive resource to explore media processing, from fundamental concepts to advanced techniques"
authors = [
    {name = "Amirhossein Heydari", email =  "amirhosseinheydari78@gmail.com"}
]
maintainers = [
    {name = "Amirhossein Heydari", email =  "amirhosseinheydari78@gmail.com"}
]
keywords = ["DIP", "digital image processing", "image processing", "media processing"]
readme = "README.md"
license = "Apache-2.0"
license-files = [
    "LICENSE",
    "assets/images/original/LICENSE"
]
requires-python = ">=3.13.7"
dependencies = [
    "imagecodecs>=2025.8.2,<2026.0.0",
    "matplotlib>=3.10.6,<4.0.0",
    "numpy>=2.3.2,<3.0.0",
    "opencv-contrib-python>=4.11.0.86,<5.0.0",
    "pillow>=11.3.0,<12.0.0",
    "scikit-image>=0.25.2,<1.0.0",
    "scipy>=1.16.1,<2.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1,<7.0.0",
    # "ipywidgets>=8.1.7,<9.0.0",
]

[project.urls]
Repository = "https://github.com/mr-pylin/media-processing-workshop"
MyHomepage = "https://mr-pylin.github.io"

[tool.uv]
line-length = 120
