[project]
name = "media-processing-workshop"
version = "0.1.0"
description = "A comprehensive resource to explore media processing, from fundamental concepts to advanced techniques"
authors = [
    { name = "Amirhossein Heydari", email = "amirhosseinheydari78@gmail.com" },
]
maintainers = [
    { name = "Amirhossein Heydari", email = "amirhosseinheydari78@gmail.com" },
]
keywords = [
    "DIP",
    "digital image processing",
    "image processing",
    "media processing",
]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "assets/images/original/LICENSE"]
requires-python = ">=3.13.9"
dependencies = [
    "imagecodecs>=2025.8.2,<2026.0.0",
    "ipykernel>=7.0.1,<8.0.0",
    "matplotlib>=3.10.7,<4.0.0",
    "numpy>=2.3.4,<3.0.0",
    "opencv-contrib-python>=4.11.0.86,<5.0.0",
    "pillow>=12.0.0,<13.0.0",
    "scikit-image>=0.25.2,<1.0.0",
    "scipy>=1.16.2,<2.0.0",
]

[project.urls]
Repository = "https://github.com/mr-pylin/media-processing-workshop"
MyHomepage = "https://mr-pylin.github.io"

[tool.black]
line-length = 120
